Updated title of page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,9 @@
+h1 {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+}
+
 .visual {
     margin: auto;
     width: 700px;
-}
-
-.visual h2 {
-    font-family: 'Lato', sans-serif;
-    text-align: center;
-    margin-bottom: 0;
 }
