--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,35 @@
-h1 {
+body {
     font-family: 'Lato', sans-serif;
+}
+
+h1 {
     text-align: center;
 }
 
 .visual {
     margin: auto;
     width: 700px;
+}
+
+#filters {
+    display: inline-block;
+    position: fixed;
+    top: 100px;
+    right: 180px;
+}
+
+input {
+    margin-bottom: 10px;
+}
+
+button {
+    color: #444444;
+    background: #F3F3F3;
+    border: 1px #DADADA solid;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: 9pt;
+    outline: none;
+    margin-top: 5px;
 }
