--- a/src/styles.css
+++ b/src/styles.css
@@ -33,8 +33,8 @@ h1 {
 #color-legend {
     display: inline-block;
     position: fixed;
-    top: 250px;
-    right: 180px;
+    top: 380px;
+    left: 1150px;
 }
 
 input {
