--- a/src/styles.css
+++ b/src/styles.css
@@ -22,12 +22,23 @@ h1 {
     left: 1150px;
 }
 
+#filters fieldset,
+#people-legend fieldset {
+    width: 140px;
+}
+
 #subfilter-age, #subfilter-gender, #subfilter-country {
-    display: inline-block;
+    height: 150px;
+    width: 180px;
     position: fixed;
     top: 260px;
     left: 1150px;
     visibility: hidden;
+}
+
+.sub-fieldset {
+    width: 140px;
+    height: 120px;
 }
 
 #color-legend {
@@ -41,7 +52,7 @@ h1 {
 #people-legend {
     display: inline-block;
     position: fixed;
-    top: 520px;
+    top: 410px;
     left: 1150px;
 }
 
