--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@ h1 {
     width: 140px;
 }
 
+#summary fieldset {
+    width: 140px;
+}
+
 #subfilter-age, #subfilter-gender, #subfilter-country {
     height: 150px;
     width: 180px;
@@ -60,13 +64,31 @@ h1 {
     height: 65px;
 }
 
-#summary {
+#summary p{
 	display: inline-block;
 	position: fixed;
     top: 100px;
     left: 50px;
     width: 300px;
+    border: 2px #DADADA solid;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-family: 'Lato', sans-serif;
+    font-size: 17px;
 }
+
+
+#summary h3{
+    display: inline-block;
+	position: fixed;
+    top: 60px;
+    left: 50px;
+    width: 300px;
+    padding: 5px 10px;
+    border-radius: 2px;
+    text-align: left;
+}
+
 
 #percent {
     display: inline-block;
