--- a/src/styles.css
+++ b/src/styles.css
@@ -64,16 +64,13 @@ h1 {
     height: 65px;
 }
 
-#summary p{
+#summary {
 	display: inline-block;
 	position: fixed;
     top: 100px;
     left: 50px;
-    width: 300px;
-    border: 2px #DADADA solid;
+    width: 250px;
     padding: 5px 10px;
-    border-radius: 2px;
-    font-family: 'Lato', sans-serif;
     font-size: 17px;
 }
 
@@ -90,12 +87,17 @@ h1 {
 }
 
 
-#percent {
+#percent, #numOfPeople {
     display: inline-block;
     position: fixed;
     top: 500px;
     left: 1150px;
     visibility: hidden;
+    color: gray;
+}
+
+#numOfPeople {
+    top: 565px;
 }
 
 input {
